app/assets/stylesheets/application.css.sass
@import "bootstrap-sprockets"
@import "bootstrap"
@import "select2"
@import "bootstrap-slider"
@import "bootstrap-datepicker3"
@import "leaflet"
@import "leaflet.markercluster"

body
    font-size: 14pt !important


/* The switch - the box around the slider */
.switch
    position: relative
    display: inline-block
    width: 60px
    height: 34px

/* Hide default HTML checkbox */
.switch input
    display:none

/* The slider */
.sliderOn
    position: absolute
    cursor: pointer
    top: 0
    left: 0
    right: 0
    bottom: 0
    background-color: #ccc
    -webkit-transition: .4s
    transition: .4s

.sliderOn:before
    position: absolute
    content: ""
    height: 26px
    width: 26px
    left: 4px
    bottom: 4px
    background-color: white
    -webkit-transition: .4s
    transition: .4s

input:checked + .sliderOn
    background-color: #2196F3

input:focus + .sliderOn
    box-shadow: 0 0 1px #2196F3

input:checked + .sliderOn:before
    -webkit-transform: translateX(26px)
    -ms-transform: translateX(26px)
    transform: translateX(26px)

/* Rounded sliders */
.sliderOn.round
    border-radius: 24px

.sliderOn.round:before
    border-radius: 50%

.centered
    text-align: center

.map-wrapper
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100%

.form-check-label
    display: inline-block
    max-width: 100%
    margin-bottom: 5px
    font-weight: normal
    text-align: center


#map-affix
    height: 92%
    width: 75%

#map-filter
    height: 92%
    width: 67%

#text-left
    text-align: left

.container
    margin-top: 4%
    width: 100%

.navbar-inverse
    background-color: rgba(0, 0, 0, .7)
    border-radius: 0

nav .nav.navbar-nav.navbar-left
    margin-left: 25px

a.nav-link.glyphicon.glyphicon-question-sign
    margin-right: 25px
    font-size: 25pt

#legend
    font-family: Arial, sans-serif
    background: #fff
    padding: 10px
    margin: 10px
    border: 3px solid #000
    width: 150px
    display: none

#legend h3
    margin-top: 0
    font-size: 20pt


#legend .color
    float: left
    width: 20px
    height: 20px
    opacity: 0.3
    filter: alpha(opacity=50)

#legend .text
    color: gray
    margin-left: 30px
    font-size: 16pt
    width: auto
    height: 10px

#legend_proc
    font-family: Arial
    background: #fff
    padding: 10px
    margin: 10px
    border: 3px solid #000
    width: 240px

#legend_proc h3
    margin-top: 0
    font-size: 16pt


#legend_proc .color
    float: left
    width: 20px
    height: 20px
    opacity: 0.8
    filter: alpha(opacity=100)

#legend_proc .text
    color: gray
    margin-left: 30px
    font-size: 12pt
    width: auto
    height: 10px

#dashboard_legend
    border: 2px solid black
    position: fixed
    right: 0
    top: 50%
    width: 25em
    margin-top: 21.5em
    background-color: white

#dashboard_legend .glyphicon
    margin-left:  25px
    margin-right:  25px

#dashboard_legend .dashboard-header
    background: lightgray
    border-bottom: 2px solid white
    border-top: 2px solid
    cursor: pointer

.navbar-inverse .navbar-nav > li > a
    color: white

#labelOverlay
    text-align: center
    cursor: default


#labelOverlay p.n_procedures
    line-height: 0.5
    font-size: 22pt
    color: #8e8e8e
    width: 100%

#labelOverlay p.atendimentos
    line-height: 0.5
    font-size: 14pt
    color: #cdcdcd
    width: 100%

#distance-legend
    height:  50px

#distance-legend .color,
    float: left
    height: 20px
    width: 20px
    border-style: double

#distance-legend .item
    margin-bottom: -7px

#distance-legend .text
    margin-left: 30px

#distance-legend .color.lt-1km
    background-color: green

#distance-legend .color.lg-1km-lt-5
    background-color: yellow

#distance-legend .color.lg-5km-lt-10
    background-color: orange

#distance-legend .color.lg-10km
    background-color: red

#metric-board
    width: 100%
    height: 35%
    padding: 20px

#metric-board #text
    font-size: 16pt
    text-align: center

#metric-board #value
    font-size: 42pt
    text-align: center
    font-weight: bold

.graphs-bottom
    position: absolute
    bottom: 0
    height: 32%

#dashboard_legend .list
    list-style: none
    display: block

#dashboard_legend .list li
    margin-right: 10px

#dashboard_legend .list span
    border: 1px solid #ccc
    float: left
    width: 12px
    height: 12px
    margin: 2px

.w3-card-4
    margin-top: 30px

div.pull-right.glyphicon.glyphicon-question-sign
    font-size: 22pt


li.list-group-item
    cursor: pointer

li.list-group-item:hover
    text-decoration: underline
    color: blue

.loading
    position: fixed
    z-index: 999
    height: 2em
    width: 2em
    overflow: show
    margin: auto
    top: 0
    left: 0
    bottom: 0
    right: 0

.loading:before
    content: ''
    display: block
    position: fixed
    top: 0
    left: 0
    width: 100%
    height: 100%
    background-color: rgba(0,0,0,0.3)

.loading:not(:required)
    font: 0/0 a
    color: transparent
    text-shadow: none
    background-color: transparent
    border: 0

.loading:not(:required):after
    content: ''
    display: block
    font-size: 10px
    width: 1em
    height: 1em
    margin-top: -0.5em
    -webkit-animation: spinner 1500ms infinite linear
    -moz-animation: spinner 1500ms infinite linear
    -ms-animation: spinner 1500ms infinite linear
    -o-animation: spinner 1500ms infinite linear
    animation: spinner 1500ms infinite linear
    border-radius: 0.5em
    -webkit-box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.5) -1.5em 0 0 0, rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0
    box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0


@-webkit-keyframes spinner
    0%
        -webkit-transform: rotate(0deg)
        -moz-transform: rotate(0deg)
        -ms-transform: rotate(0deg)
        -o-transform: rotate(0deg)
        transform: rotate(0deg)

    100%
        -webkit-transform: rotate(360deg)
        -moz-transform: rotate(360deg)
        -ms-transform: rotate(360deg)
        -o-transform: rotate(360deg)
        transform: rotate(360deg)

@-moz-keyframes spinner
    0%
        -webkit-transform: rotate(0deg)
        -moz-transform: rotate(0deg)
        -ms-transform: rotate(0deg)
        -o-transform: rotate(0deg)
        transform: rotate(0deg)

    100%
        -webkit-transform: rotate(360deg)
        -moz-transform: rotate(360deg)
        -ms-transform: rotate(360deg)
        -o-transform: rotate(360deg)
        transform: rotate(360deg)

@-o-keyframes spinner
    0%
        -webkit-transform: rotate(0deg)
        -moz-transform: rotate(0deg)
        -ms-transform: rotate(0deg)
        -o-transform: rotate(0deg)
        transform: rotate(0deg)

    100%
        -webkit-transform: rotate(360deg)
        -moz-transform: rotate(360deg)
        -ms-transform: rotate(360deg)
        -o-transform: rotate(360deg)
        transform: rotate(360deg)

@keyframes spinner
    0%
        -webkit-transform: rotate(0deg)
        -moz-transform: rotate(0deg)
        -ms-transform: rotate(0deg)
        -o-transform: rotate(0deg)
        transform: rotate(0deg)

    100%
        -webkit-transform: rotate(360deg)
        -moz-transform: rotate(360deg)
        -ms-transform: rotate(360deg)
        -o-transform: rotate(360deg)
        transform: rotate(360deg)

